<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Melbourne Public Transport</string>
    <string name="action_settings">Settings</string>

    <string name="action_add_favorite_stop">Add favorite stop</string>
    <string name="action_train_stops_nearby">Train stops nearby</string>
    <string name="action_stops_nearby">Stops nearby</string>
    <string name="action_disruptions">Disruptions</string>
    <string name="delete_all_favorite_stop">Delete all favorite stops</string>

    <!-- menu_departures -->
    <string name="action_refresh_data">Refresh screen</string>
    <string name="action_sort_by_time">Sort by time</string>
    <string name="action_sort_by_direction">Sort by direction</string>

    <string name="searching_in_progress">Searching</string>
    <string name="empty_search_results">Nothing found - change search text and try again.</string>
    <string name="invalid_search_text">Search text can only contain letters, numbers, spaces, commas and decimal period.</string>

    <string name="express_train">Express to <xliff:g id="platform_number">%1$s</xliff:g></string>
    <string name="all_stops_train">All stops to <xliff:g id="platform_number">%1$s</xliff:g></string>

    <!-- Fixed Location from Setter start -->
    <!-- Key name for storing fixed location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_key_fixed_location_setter" translatable="false">fixed_location</string>

    <!-- Title for the fixed location preference [CHAR LIMIT=30]  -->
    <string name="pref_title_fixed_location_setter">Fixed location setter</string>
    <!-- Fixed Location from Setter end   -->

    <!-- Key name for storing widget stop name in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_key_widget_stop_name" translatable="false">widget_stop_name</string>

    <string name="departures_data_sort_order_by_time">departures_data_sort_order_by_time</string>

    <!-- Key name for storing widget stop id in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_key_widget_stop_id">widget_stop_id</string>
    <string name="pref_default_widget_stop_id">1071</string>
    <string name="pref_default_widget_stop_name">Flinders Street Station</string>

    <!-- Key name for storing AppBar vertical offset in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_key_appbar_vertical_offset" translatable="false">appbar_vertical_offset</string>
    <string name="pref_default_appbar_vertical_offset">9999</string>

    <!-- Title for the location preference [CHAR LIMIT=30]  -->
    <string name="pref_title_widget_stop_name">Widget stop name</string>

    <!-- Key name for storing use fixed/device location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_key_use_device_location">use_device_fixed_location</string>
    <string name="pref_title_use_device_fixed_location">Use \'fixed\' / device location</string>
    <string name="pref_err_use_device_location">\'fixed location\' not assigned</string>
    <string name="pref_summary_use_device_location">Using device location to show \'stops nearby\'.
    </string>
    <string name="pref_summary_use_fixed_location">Using \'fixed\' location to show \'stops nearby\'.
    </string>

    <!-- Key name for the Transport Types (PTV route_types) preference [CHAR LIMIT=30] -->
    <string name="pref_key_route_types">pref_key_route_types</string>
    <!-- Entries for the Route Types preference [CHAR LIMIT=30] -->
    <string name="pref_title_route_types">Transport types</string>
    <string name="pref_title_route_types_dialog">
        Transport types for \'Find Stops\' and \'Stops Nearby\' searches.
    </string>
    <string name="pref_summary_route_types">All.</string>
    <!-- default transport type 0 - train -->
    <string-array name="pref_route_types_display_values">
        <item>Bus</item>
        <item>Tram</item>
        <item>Train</item>
        <item>VLine</item>
        <item>Night Bus</item>
    </string-array>
    <string-array name="pref_route_types_values_array">
        <item>2</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="pref_default_route_types_array">
        <item>2</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <!-- Key name for the Transport Types (PTV route_types) preference [CHAR LIMIT=30] -->
    <string name="pref_key_disruptions_types">pref_key_disruptions_types</string>
    <!-- Entries for the Route Types preference [CHAR LIMIT=30] -->
    <string name="pref_title_disruptions_types">Disruption types</string>
    <string name="pref_title_disruptions_types_dialog">
        Disruption types for \'Disruptions\' search.
    </string>
    <string name="pref_summary_all_disruptions_types_selected">All selected.</string>
    <string name="pref_summary_some_disruptions_types_selected">
        <xliff:g id="some_disruptions_types_selected">%1$d</xliff:g> selected.
    </string>
    <string name="pref_summary_disruptions_types">All.</string>
    <!-- default transport type 0 - train -->
    <string-array name="pref_disruptions_types_display_values">
        <item>Metropolitan Bus</item>
        <item>Metropolitan Tram</item>
        <item>Metropolitan Train</item>
        <item>Regional Bus</item>
        <item>Regional Coach</item>
        <item>Regional Train</item>
    </string-array>
    <string-array name="pref_disruptions_types_values_array">
        <item>2</item>
        <item>1</item>
        <item>0</item>
        <item>4</item>
        <item>3RC</item>
        <item>3RT</item>
    </string-array>
    <string-array name="pref_default_disruptions_types_array">
        <item>2</item>
        <item>1</item>
        <item>0</item>
        <item>4</item>
        <item>3RC</item>
        <item>3RT</item>
    </string-array>

    <string name="pref_key_disruptions_sections_visibility">pref_key_disruptions_sections_visibility</string>

    <string name="show_stop_searcher_instructions">show_stop_searcher_instructions</string>

    <!-- Key name for the Stops_Nearby_max_distance search preference [CHAR LIMIT=30] -->
    <string name="pref_key_stops_nearby_max_distance">pref_key_stops_nearby_max_distance</string>
    <!-- Title for the Stips Nearby max distance preference [CHAR LIMIT=30] -->
    <string name="pref_title_stops_nearby_max_distance">
        \'Stops Nearby\' search max distance.
    </string>
    <string name="pref_title_stops_nearby_max_distance_dialog">
        Max distance in meters for \'Stops Nearby\' searches (max 100 km).
    </string>
    <!-- default transport type 0 - train -->
    <string name="pref_default_stops_nearby_max_distance">40000</string>

    <!-- Key name for storing location latlong in SharedPreferences -->
    <string name="pref_key_fixed_location_name" translatable="false">default_fixed_location_name</string>
    <string name="pref_key_default_fixed_location_name" translatable="false">
        233 Flinders St, Melbourne 3000, Australia
    </string>
    <string name="pref_key_fixed_location_latitude" translatable="false">loc-latitude</string>
    <string name="pref_key_fixed_location_longitude" translatable="false">loc-longitude</string>

    <string name="platform_number">Platform: <xliff:g id="platform_number">%1$s</xliff:g></string>

    <string name="no_favorite_stops_selected">
        \nNo favorite stops selected.
        To add a new stop, click on the \'+\' icon in the action bar, enter the search text and select a stop from the search results.
    </string>

    <!-- Strings related to content descriptions shared between different layouts -->
    <string name="content_desc_bus_transport_type">Bus</string>
    <string name="content_desc_tram_transport_type">Tram</string>
    <string name="content_desc_train_transport_type">Train</string>
    <string name="content_desc_show_departures">Show databaseDepartures</string>
    <string name="content_desc_add_to_favorites">Add to favorite stops</string>
    <string name="content_desc_search_for_line_stops">search for line\'s stops</string>
    <string name="content_desc_delete_recent_search_text">Delete recent search text</string>
    <string name="content_desc_start_search">Start lines/stops search</string>
    <string name="content_desc_show_map">Show stop on map</string>
    <string name="content_desc_remove_from_favorites">Remove stop from favorites</string>
    <string name="content_show_stop_facility">Show stop facility</string>
    <string name="content_show_disruptions">Show disruptions</string>
    <string name="content_desc_next_departures">Next databaseDepartures</string>
    <string name="enter_search_text">Enter search text.</string>
    <string name="search_cancelled_enter_search_text">Search cancelled - enter search text.</string>
    <string name="search_instructions">
        Type line, route or stop name and wait\n one second
        or press search button.
    </string>
    <string name="search_instructions_notes">
        If the input search text is less than three (3) characters and a number, the Search API will only return matching “line” objects.\n\n
        Non-numeric search terms less than three (3) characters will not return any results.
        The Search API includes a suburb search.\n\n

        If the search term is also the name of (or part of the name of) a suburb, Search will return the following:\n
        \n\t\t stops with the search term in the location name
        \n\t\t stops with the search term in the suburb field
        \n\t\t lines that travel through suburbs that contain the search term (though these suburbs are not visible as they are not returned as part of the “line” object)\n\n
        For example, searching for “fitzroy” returns\n

        \n\t\t stops with “fitzroy” in the suburb field (e.g. suburb: “Fitzroy North”)
        \n\t\t stops with “fitzroy” in the location_name field (e.g. “Acland St/Fitzroy St #135”)
        \n\t\t lines that travel through suburbs that contain “fitzroy”\n\n

        You can filter search results by transport mode by using the name of the mode as part of your search. For example:\n
        \n\t\t “tram carnegie” returns tram stops and lines relevant to Carnegie
        \n\t\t “tram 3” returns tram lines that contain the number “3”
        \n\t\t “whitehorse bus” returns bus lines and stops containing the word “whitehorse”\n\n

        You can also filter by suburb, for example:\n\n

        \t\t “william, fitzroy” returns stops with “william” in the location_name and in suburbs Fitzroy or Fitzroy North
        \n\t\t (The input order for these combinations does not matter – e.g. “tram 3” and “3 tram” return the same results.)\n\n

        You can also use the word “route” with numeric search terms to limit results to “line” objects, for example:\n\n

        \t\t “route 900” returns the Route 900 line
    </string>

    <string name="text_show_less">Show less</string>
    <string name="text_show_more">Show more</string>
    <string name="ptv_is_not_available">PTV is not available - try again later</string>
</resources>
