<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".fragments.FavoriteStopsFragment">

    <!-- android:id="@+id/stopsSearcherFragment" - it has to be identical to the 'id' in the corresponding -->
    <!-- fragment id in the navigation.xml file.                                                           -->

    <!-- Navigate to the StopsSearcherFragment -->
    <item
            android:id="@+id/favStops_goToStopsSearcherFragment"
            android:orderInCategory="10"
            android:title="@string/action_add_favorite_stop"
            android:icon="@drawable/ic_stock_add_circle_white"
            app:showAsAction="ifRoom"/>

    <!-- Call the FavoriteStopsViewModel to delete all Favorite Stops -->
    <item
            android:id="@+id/favStops_removeAllFavoriteStops"
            android:orderInCategory="20"
            android:title="@string/delete_all_favorite_stop"
            android:icon="@drawable/ic_stock_delete_green_500"
            app:showAsAction="never"/>

    <!-- Navigate to the StopsNearbyFragment -->
    <item
            android:id="@+id/favStops_trainStopsNearby"
            android:orderInCategory="20"
            android:title="@string/action_train_stops_nearby"
            android:icon="@drawable/ic_stock_near_me_white"
            app:showAsAction="never"/>

    <!-- Navigate to the StopsNearbyFragment -->
    <item
            android:id="@+id/favStops_stopsNearby"
            android:orderInCategory="30"
            android:title="@string/action_stops_nearby"
            app:showAsAction="never"/>

    <!-- Navigate to the DisruptionsFragment -->
    <item
            android:id="@+id/favStops_disruptions"
            android:orderInCategory="40"
            android:title="@string/action_disruptions"
            app:showAsAction="never"/>
</menu>
