<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".fragments.NextDeparturesFragment">

    <item
            android:id="@+id/directions_menu_refresh_data"
            android:icon="@drawable/ic_stock_refresh_white"
            android:orderInCategory="10"
            android:title="@string/action_refresh_data"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/directions_menu_sort_by_time"
            android:orderInCategory="20"
            android:title="@string/action_sort_by_time"
            app:showAsAction="never"/>

    <item
            android:id="@+id/directions_menu_sort_by_direction"
            android:orderInCategory="30"
            android:title="@string/action_sort_by_direction"
            app:showAsAction="never"/>
</menu>