<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="lineStopDetails"
                type="au.com.kbrsolutions.melbournepublictransport.domain.LineStopDetails" />

        <variable
                name="clickListener"
                type="au.com.kbrsolutions.melbournepublictransport.stopssearcher.StopsSearcherListener" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:orientation="horizontal"
            android:onClick="@{() -> clickListener.onClickNoIcon(lineStopDetails)}">

        <ImageView
                android:id="@+id/stopSearcherTransportImageId"
                android:scaleType="center"
                android:layout_width="@dimen/touchable_size"
                android:layout_height="@dimen/touchable_size"
                android:background="@drawable/touch_selector"

                app:source='@{"stopSearcherTransportImageId"}'
                app:transportImage='@{lineStopDetails}'

                android:src="@drawable/ic_stock_train_blue_500"
                android:contentDescription="@string/content_desc_train_transport_type"
                tools:ignore="PrivateResource" />

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/stopSearcherStopOrLineName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/touch_selector"

                    app:source='@{"stopSearcherStopOrLineName"}'
                    app:stopOrLineName='@{lineStopDetails}'

                    tools:text="Stop name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/list_view_line1_magnified_text_size_sp" />

            <TextView
                    android:id="@+id/stopSearcherStopSuburbOrLineInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:source='@{"stopSearcherStopSuburbOrLineInfo"}'
                    app:stopSearcherStopSuburbOrLineInfo='@{lineStopDetails}'

                    tools:text="Stop address"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/secondary_text"
                    android:background="@drawable/touch_selector" />

            <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/stopSearcherAddToFavoriteOrGetStopsOnLineImageId"
                        android:layout_width="@dimen/touchable_size"
                        android:layout_height="@dimen/touchable_size"

                        app:source='@{"stopSearcherAddToFavoriteOrGetStopsOnLineImageId"}'
                        app:addStopOrFindLineStops='@{lineStopDetails}'

                        android:adjustViewBounds="true"
                        android:background="@drawable/touch_selector"
                        android:src="@drawable/ic_stock_add_circle_outline_green_500"
                        android:contentDescription="@string/content_desc_add_to_favorites" />

                <ImageView
                        android:id="@+id/stopSearcherDeparturesImageId"
                        android:layout_width="@dimen/touchable_size"
                        android:layout_height="@dimen/touchable_size"
                        android:adjustViewBounds="true"
                        android:background="@drawable/touch_selector"
                        android:src="@drawable/ic_stock_forward_10_green_500"
                        android:contentDescription="@string/content_desc_show_departures" />

                <ImageView
                        android:id="@+id/stopSearcherMapImageId"
                        android:layout_width="@dimen/touchable_size"
                        android:layout_height="@dimen/touchable_size"
                        android:adjustViewBounds="true"
                        android:background="@drawable/touch_selector"
                        android:src="@drawable/ic_stock_place_green_500"
                        android:contentDescription="@string/content_desc_show_map" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>

<!--

        android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
        android:layout_marginEnd="@dimen/abc_list_item_padding_horizontal_material"

            android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
            android:layout_marginEnd="@dimen/abc_list_item_padding_horizontal_material"

-->